<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Header"
        android:layout_width="0dp"
        android:layout_height="110dp"/>

    <ImageView
        android:id="@+id/iv_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/BackButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/back_button" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/iv_emblem_fg"
            android:src="@mipmap/ic_launcher_round"
            android:layout_marginTop="75dp"
            android:layout_marginStart="25dp"
            android:layout_width="175dp"
            android:layout_height="175dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="1dp"
            android:contentDescription="@string/emblem_foreground"/>

        <ImageView
            android:id="@+id/iv_emblem_bg"
            android:src="@mipmap/ic_launcher_round"
            android:layout_marginTop="75dp"
            android:layout_marginStart="25dp"
            android:layout_width="175dp"
            android:layout_height="175dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/emblem_background"/>


        <TextView
            android:id="@+id/tv_guild_name"
            tools:text="Placeholder"
            android:textSize="20sp"
            style="@style/primaryTextStyle"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@id/iv_emblem_fg"
            app:layout_constraintTop_toTopOf="@id/iv_emblem_fg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/tv_guild_tag"
            tools:text="Placeholder"
            android:textSize="20sp"
            style="@style/primaryTextStyle"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@id/iv_emblem_fg"
            app:layout_constraintTop_toBottomOf="@id/tv_guild_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tv_guild_motd"
            tools:text="Placeholder"
            android:textSize="16sp"
            style="@style/primaryTextStyle"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_emblem_fg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tv_member_list"
            android:text="@string/members"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            style="@style/primaryTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_guild_motd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_member_see_all"
            style="@style/SeeAllButton"
            android:text="@string/see_all"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_guild_motd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape_rounded_border"
            android:paddingStart="7dp"
            tools:ignore="RtlSymmetry"
            android:layout_marginTop="5dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_guild_member_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_member_list"
            tools:listitem="@layout/guild_member_recycler_item"
            tools:itemCount="3"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pb_guild_fragment"
        android:indeterminateTint="@color/design_default_color_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>